# pylogmon

./: CMakeLists.txt  README.md  test.py
pylogmon/: __init__.py
src/: EventMonitor.h  FileMonitor.h  Types.h  module.cpp
